# life

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.json  configure  license  license.txt  life.desktop  makefile
help/: CMakeLists.txt  header.html  help.html
icon/: CMakeLists.txt
res/: CMakeLists.txt  game-fragment.glsl  menu-vertex.glsl
src/: CMakeLists.txt  context.hpp  control.cpp  control.h  file-dialog.cpp  file-dialog.h  font.cpp  game.cpp  game.h  life.cpp  life.h  main.cpp  main.h  menu.cpp  menu.h
src/shader/: fragment.glsl  game-fragment.glsl  game-vertex.glsl  geometry.glsl  menu-fragment.glsl  menu-geometry.glsl  menu-vertex.glsl  vertex.glsl
